--- a/GroupAssignment1/Views/Housing/Index.cshtml
+++ b/GroupAssignment1/Views/Housing/Index.cshtml
@@ -4,6 +4,25 @@
 
 <html>
     <head>
-
+        <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+        <title>Group Assignment 1</title>
     </head>
-</html>
+
+    <body>
+        <div class="container">
+            <!--<h1>@ViewBag.CurrentViewName</h1>-->
+            <table class="table table-striped">
+                <tr><th>Id</th><th>Name</th><th>Price</th><th>Description</th></tr>
+                @foreach (var housing in Model)
+            {
+                <tr>
+                    <td>@housing.HousingId</td>
+                    <td>@housing.Name</td>
+                    <!--<td>@housing.Rent.ToString("")</td>-->
+                </tr>
+            }
+        </table>
+        </div>
+    </body>
+</html> 
