--- a/GroupAssignment1/Views/_ViewImports.cshtml
+++ b/GroupAssignment1/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GroupAssignment1
 @using GroupAssignment1.Models
+@using GroupAssignment1.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
