--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/jquery/jquery.js"></script>
         <style>
@@ -16,8 +16,7 @@
                     
                 background-position: bottom;
                 color: #fff;
-                height: 200% !important;
-                width: 100% !important;
+                height: 100%;
             }
 
             .mb-3 {
@@ -28,12 +27,14 @@
     </head>
 
     <body>
-        <div class="jumbotron text-center">
-            <h1>Welcome to ***BNB</h1>
-            <p>Find your home for now or for later.</p>
-            <p>
-                <a class="btn btn-primary btn-lg" href="Login" role="button">Get started</a>
-            </p>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1>Welcome to ***BNB</h1>
+                <p>Find your home for now or for later.</p>
+                <p>
+                    <a class="btn btn-primary btn-lg" href="Login" role="button">Get started</a>
+                </p>
+            </div>
         </div>
     </body>
 </html>
