--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -3,37 +3,41 @@
 }
 
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/jquery/jquery.js"></script>
         <style>
+
             .jumbotron {
                 background-image: url(../../images/home1.jpg);
                 background-size: cover;
-                    
-                background-position: bottom;
-                color: #fff;
-                height: 100%;
+                width: 100vw;
+                height: 50vh;
+                text-align: center;
             }
 
-            .mb-3 {
-                margin-bottom: 0!important;            
+            .container {
+                margin: 0;
+                padding: 0;
             }
-        
+
+            #test {
+                margin: auto;
+                background-color: rgb(0,0,0,0.5);
+                height:100%;
+                color: white;
+                display: inline-block;
+                vertical-align: middle;
+            }
+
+
         </style>
     </head>
 
     <body>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1>Welcome to ***BNB</h1>
-                <p>Find your home for now or for later.</p>
-                <p>
-                    <a class="btn btn-primary btn-lg" href="Login" role="button">Get started</a>
-                </p>
+        <div class="jumbotron text-center">
+            <div class="container-fluid" id="test">
+                <h1 class="display-4">Fluid jumbotron</h1>
+                <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
             </div>
         </div>
     </body>
