--- a/GroupAssignment1/Views/Housing/Details.cshtml
+++ b/GroupAssignment1/Views/Housing/Details.cshtml
@@ -9,5 +9,6 @@
     <div class="col-7">
         <h5>@Model.Description</h5>
         <h3 class="pull-right">@Model.Rent.ToString("0.00 NOK")</h3>
+        <p><a href="/Housing/Table">Go Back</a></p>
     </div>
 </div>
