--- a/GroupAssignment1/Views/Shared/_Layout.cshtml
+++ b/GroupAssignment1/Views/Shared/_Layout.cshtml
@@ -4,16 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ***BNB</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/jquery/jquery.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-        body {
-            border: none;
-            margin: 0;
-            padding: 0;
+        .navbar-collapse.in {
+            display: block !important;
         }
 
+        .navbar-brand {
+            margin-left: 50px;
+        }
+
+        .nav-item {
+            margin-left: 50px;
+        }
+
+        .navbar-toggler {
+            margin-right: 50px;
+        }
+        
     </style>
 </head>
 <body>
@@ -30,6 +40,7 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
