--- a/GroupAssignment1/wwwroot/css/site.css
+++ b/GroupAssignment1/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    width: 100vw;
 }
 
 @media (min-width: 768px) {
@@ -15,4 +16,6 @@ html {
 
 body {
   margin-bottom: 60px;
+  min-height: 100vh;
+  width: 100vw;
 }
