Test for å sjekke om Git funker på mac

--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
     <body>
         <div class="jumbotron text-center">
             <div class="container-fluid" id="test">
-                <h1 class="display-4">Fluid noe noe</h1>
+                <h1 class="display-4">Fluid noe noe igjen</h1>
                 <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
             </div>
         </div>
