div endringer, knapp bla.

--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
             .container {
                 margin: 0;
                 padding: 0;
+                font-family:'Times New Roman', Times, serif
             }
 
             #test {
@@ -29,6 +30,19 @@
                 vertical-align: middle;
             }
 
+            .button {
+                border: none;
+                color: black;
+                background-color: white;
+                text-align: center;
+                text-decoration: none;
+                font-size: 18px;
+                font-family:'Times New Roman', Times, serif;
+                padding: 15px 40px;
+                margin: 20px
+              
+            }
+
 
         </style>
     </head>
@@ -36,8 +50,9 @@
     <body>
         <div class="jumbotron text-center">
             <div class="container-fluid" id="test">
-                <h1 class="display-4">Fluid noe noe igjen</h1>
-                <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1 class="display-4">LAMRentals</h1>
+                <p>Rent your dream home, for now or later</p>
+                <button class="button" button id="buttonRentals">Rentals</button>
             </div>
         </div>
     </body>
