--- a/GroupAssignment1/Views/Housing/Table.cshtml
+++ b/GroupAssignment1/Views/Housing/Table.cshtml
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<h1>List of Houses/Apartments (@Model.CurrentViewName View)</h1>
+<h1>List of homes for rent (@Model.CurrentViewName View)</h1>
 <a href="/Housing/Grid">Grid View</a>
 <div class="container">
     <table class="table table-striped">
