Div. comments to check tomorrow:)

--- a/GroupAssignment1/Views/Housing/Grid.cshtml
+++ b/GroupAssignment1/Views/Housing/Grid.cshtml
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 
 <style>
+
     a {
         color: hotpink;
     }
@@ -46,6 +47,7 @@
                     </div>
                 </div>
             </div>
+            /*<button class="button buttonChoose">Choose dates</button>*/
         }
     </div>
 </div>
