--- a/GroupAssignment1/Views/Housing/Grid.cshtml
+++ b/GroupAssignment1/Views/Housing/Grid.cshtml
@@ -18,8 +18,8 @@
                             <div>
                                 <h5 class="text-start">
                                     <a asp-controller="Housing"
-                                        asp-action="Details"
-                                        asp-route-id="@housing.HousingId">@housing.Name</a>
+                                    asp-action="Details"
+                                    asp-route-ID="@housing.HousingId">@housing.Name</a>
                                 </h5>
                                 <h5 class="text-nowrap">
                                     @housing.Rent.ToString("0.00 NOK")
