--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -5,46 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <style>
-
-            .jumbotron {
-                background-image: url(../../images/home1.jpg);
-                background-size: cover;
-                width: 100vw;
-                height: 50vh;
-                text-align: center;
-            }
-
-            .container {
-                margin: 0;
-                padding: 0;
-                font-family:'Times New Roman', Times, serif
-            }
-
-            #test {
-                margin: auto;
-                background-color: rgb(0,0,0,0.5);
-                height:100%;
-                color: white;
-                display: inline-block;
-                vertical-align: middle;
-            }
-
-            .button {
-                border: none;
-                color: black;
-                background-color: white;
-                text-align: center;
-                text-decoration: none;
-                font-size: 18px;
-                font-family:'Times New Roman', Times, serif;
-                padding: 15px 40px;
-                margin: 20px
-              
-            }
-
-
-        </style>
+        <link rel="stylesheet" href="/css/index.css" type="text/css" />
     </head>
 
     <body>
