--- a/GroupAssignment1/Views/Housing/Table.cshtml
+++ b/GroupAssignment1/Views/Housing/Table.cshtml
@@ -1,59 +1,42 @@
 ﻿@model HousingListViewModel
 
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="/css/table.css" type="text/css" />
+</head>
 
-<style>
-    a {
-        color: hotpink;
-    }
-
-    a:hover {
-        color: royalblue;
-    }
-
-    a:link {
-        text-decoration: none;
-    }
-
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    th, td {
-        padding: 8px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-    }
-
-    tr:hover {
-        background-color: #e8f4f8;
-    }
-</style>
-
-<h1>List of homes for rent (@Model.CurrentViewName View)</h1>
-<a href="/Housing/Grid">Grid View</a>
-<div class="container">
-    <table class="table">
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Rent</th>
-            <th>Description</th>
-        </tr>
-        @foreach (var housing in Model.Housings)
-        {
+<body>
+    <h1>List of homes for rent (@Model.CurrentViewName View)</h1>
+    <a href="/Housing/Grid">Grid View</a>
+    <div class="container">
+        <table class="table">
             <tr>
-                <td>@housing.HousingId</td>
-                <td><a asp-controller="Housing"
-                    asp-action="Details"
-                    asp-route-id="@housing.HousingId">@housing.Name</a></td>
-                <td>@housing.Rent.ToString("0.00 NOK")</td>
-                <td>@housing.Description</td>
-                <td><a asp-controller="Housing"
-                    asp-action="Details"
-                    asp-route-id="@housing.HousingId" class="btn btn-outline-dark">See more</a></td>
+                
+                <th>Id</th>
+                <th>Name</th>
+                <th>Rent</th>
+                <th>Description</th>
+                
             </tr>
-        }
-    </table>
-</div>
+            @foreach (var housing in Model.Housings)
+            {
+                <tr>
+                    <td>@housing.HousingId</td>
+                    <td>@housing.HousingId</td>
+                    <td>
+                        <a asp-controller="Housing"
+                           asp-action="Details"
+                           asp-route-id="@housing.HousingId">@housing.Name</a>
+                    </td>
+                    <td>@housing.Rent.ToString("0.00 NOK")</td>
+                    <td>@housing.Description</td>
+                    <td>
+                        <a asp-controller="Housing"
+                           asp-action="Details"
+                           asp-route-id="@housing.HousingId" class="btn btn-outline-dark">See more</a>
+                    </td>
+                </tr>
+                                }
+        </table>
+    </div>
+</body>
