--- a/GroupAssignment1/wwwroot/css/table.css
+++ b/GroupAssignment1/wwwroot/css/table.css
@@ -1,3 +1,30 @@
 ﻿body {
 }
 
+
+a {
+    color: hotpink;
+}
+
+a:hover {
+    color: royalblue;
+}
+
+ a:link {
+    text-decoration: none;
+ }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+    background-color: #e8f4f8;
+}
