--- a/GroupAssignment1/wwwroot/css/table.css
+++ b/GroupAssignment1/wwwroot/css/table.css
@@ -1,7 +1,25 @@
 ﻿body {
 }
 
+.table {
 
+    tr
+{
+    border-radius: 50px;
+    padding: 25px 25px;
+    margin-bottom: 25px;
+}   
+
+    th {
+
+        background-color: white;
+        font-size: 14px;
+        text-transform: uppercase;
+        letter-spacing: 0.03em;
+        width: 50%;
+
+    }
+}   
 
 a {
     color: #0B0014;
@@ -15,11 +33,6 @@ a:hover {
     text-decoration: none;
  }
 
-table {
-    border-collapse: collapse;
-    width: 100%;
-
-}
 
 th, td {
     text-align: left;
@@ -29,3 +42,19 @@ th, td {
 tr:hover {
     background-color: #e8f4f8;
 }
+
+.container { 
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+h1 {
+   font-size: 26px;
+   margin: 20px 0;
+   text-align: center;
+}
+
+
