@Demo: Database CRUD

--- a/GroupAssignment1/Views/Home/Index.cshtml
+++ b/GroupAssignment1/Views/Home/Index.cshtml
@@ -9,11 +9,13 @@
     </head>
 
     <body>
-        <div class="jumbotron text-center">
-            <div class="container-fluid" id="test">
-                <h1 class="display-4">LAMRentals</h1>
-                <p>Rent your dream home, for now or later</p>
-                <button class="button" button id="buttonRentals">Rentals</button>
+        <div class="jumbotron ">
+            <div class="d-flex justify-content-center align-items-center" id="background">
+                <div>
+                    <h1 class="display-4">LAMRentals</h1>
+                    <h3>Rent your dream home, for now or for later.</h3><br />
+                    <button type="button" class="btn btn-light" id="button">Sign in</button>
+                </div>
             </div>
         </div>
     </body>
