--- a/GroupAssignment1/Views/Housing/Table.cshtml
+++ b/GroupAssignment1/Views/Housing/Table.cshtml
@@ -1,42 +1,10 @@
 ﻿@model HousingListViewModel
 
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="/css/table.css" type="text/css" />
-</head>
 
-<body>
-    <h1>List of homes for rent (@Model.CurrentViewName View)</h1>
-    <a href="/Housing/Grid">Grid View</a> 
-    <div class="container">
-        <table class="table">
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Rent</th>
-                <th>Description</th>
-            </tr>
-                
-                
-            @foreach (var housing in Model.Housings)
-            {
-                <tr>
-                    <td>@housing.HousingId</td>
-                    
-                    <td>
-                        <a asp-controller="Housing"
-                           asp-action="Details"
-                           asp-route-id="@housing.HousingId">@housing.Name</a>
-                    </td>
-                    <td>@housing.Rent.ToString("0.00 NOK")</td>
-                    <td>@housing.Description</td>
-                    <td>
-                        <a asp-controller="Housing"
-                           asp-action="Details"
-                           asp-route-id="@housing.HousingId" class="btn btn-outline-dark">See more</a>
-                    </td>
-                </tr>
-             }
-        </table>
-    </div>
-</body>
+<link rel="stylesheet" href="/css/table.css" type="text/css" />
+
+
+<h1>List of homes for rent (@Model.CurrentViewName View)</h1>
+<a href="/Housing/Grid">Grid View</a> 
+
+<partial name="_ItemTable" model="Model.Housings" />
