--- a/GroupAssignment1/wwwroot/css/index.css
+++ b/GroupAssignment1/wwwroot/css/index.css
@@ -19,23 +19,12 @@ body {
     font-family: 'Times New Roman', Times, serif
 }
 
-#test {
+#background {
     margin: auto;
     background-color: rgb(0,0,0,0.5);
     height: 100%;
     color: white;
-    display: inline-block;
-    vertical-align: middle;
+    
 }
 
-.button {
-    border: none;
-    color: black;
-    background-color: white;
-    text-align: center;
-    text-decoration: none;
-    font-size: 18px;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 15px 40px;
-    margin: 20px
-}
+
