--- a/GroupAssignment1/Views/Housing/Table.cshtml
+++ b/GroupAssignment1/Views/Housing/Table.cshtml
@@ -8,3 +8,5 @@
 <a href="/Housing/Grid">Grid View</a> 
 
 <partial name="_ItemTable" model="Model.Housings" />
+
+<!--<a class="btn btn-primary" asp-action="OrderConsole">Console Output</a>-->
