--- a/GroupAssignment1/Views/Housing/Delete.cshtml
+++ b/GroupAssignment1/Views/Housing/Delete.cshtml
@@ -1,3 +1,30 @@
 ﻿@model Housing
 
 <h2>Delete current Listing</h2>
+
+<h3>Are you sure you want to delete this housing?</h3>
+<div>
+    <h4>Current Housing</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">Housing Id</dt>
+        <dd class="col-sm-10">@Model.HousingId</dd>
+
+        <dt class="col-sm-2">Name</dt>
+        <dd class="col-sm-10">@Model.Name</dd>
+
+        <dt class="col-sm-2">Rent</dt>
+        <dd class="col-sm-10">@Model.Rent</dd>
+
+        <dt class="col-sm-2">Description</dt>
+        <dd class="col-sm-10">@Model.Description</dd>
+
+        <dt class="col-sm-2">Image URL</dt>
+        <dd class="col-sm-10">@Model.ImageUrl</dd>
+    </dl>
+
+    <form asp-action="DeleteConfirmed" asp-route-id="@Model.HousingId" method="post">
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Table" class="btn btn-secondary">Cancel</a>
+    </form>
+</div>
